# Warhammer-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  structure.puml
.cache/clangd/index/: battle_round.cpp.9EE0448820F36DA1.idx  character.cpp.5D310870CE5D4347.idx  coords.hpp.35AE0FCF7488C29D.idx  datasheet.cpp.88E0140D0A00D4F0.idx  datasheet.cpp.B594144E9893F3D0.idx  datasheet.cpp.EE2E09599AAA95C1.idx  datasheet.hpp.0CE0D3BFC75D04A8.idx  datasheet.hpp.807E0F2AFF7D479D.idx  datasheet.hpp.ECBCD7EABD68918F.idx  dice.cpp.70B8BB4C55B5D8C7.idx  dice.cpp.90CFEAF4D397E860.idx  dice.cpp.DDE62808C5BDE815.idx  dice.hpp.1BF9B793E2767D4C.idx  dice.hpp.2F575313046818D3.idx  dice.hpp.A4468445A1D54849.idx  main.cpp.008144C66D2255F3.idx  main.cpp.248D3E292E822163.idx  main.cpp.48939E45660A5EF5.idx  model.cpp.20B9E6D8C7B57ED0.idx  model.cpp.796090EC14CD4D4A.idx  model.hpp.0292C6B1C5FF81A0.idx  model.hpp.20EED3189C11DE19.idx  player.cpp.F91D2FF65E0BC8DA.idx  simulate.cpp.4B2ED3C076C86E2D.idx  simulate.cpp.52B2FD2DFA1F5C83.idx  simulate.cpp.991B78265B0BB5FE.idx  unit.cpp.B3604505FCDE436D.idx  unit.hpp.C076DC3AF7EE19C3.idx  utils.hpp.79BF2B5AB0311FBF.idx  utils.hpp.A81955A25CEF2CDB.idx  (+6 more)
notes/: basic_rules.txt  battle_round.txt  charge_phase.txt  command_phase.txt  datasheets.txt  fight_phase.txt  making_attacks.txt  missions.txt  morale_phase.txt  psychic_phase.txt  ranged_weapon_types.txt  shooting_phase.txt  structure.txt
src/: battle_round.hpp  character.hpp  coords.hpp  datasheet.cpp  datasheet.hpp  dice.cpp  dice.hpp  fight_phase.cpp  fight_phase.hpp  main.cpp  model.cpp  model.hpp  player.hpp  simulate.hpp  unit.cpp  unit.hpp  utils.cpp  weapon.cpp  weapon.hpp
